--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>AeroRead | Speed Reading Archive</title>
+    <meta name="description" content="High-precision speed reading interface for digital archives." />
+    <meta name="author" content="Samar" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AeroRead" />
+    <meta property="og:description" content="High-precision speed reading interface for digital archives." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="AeroRead" />
+    <meta name="twitter:image" content="/og-image.png" />
+    
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
